lambda functions update

--- a/Fundamentals/lambda_functions.ipynb
+++ b/Fundamentals/lambda_functions.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,12 +28,12 @@
     "### IIFEs \n",
     "Immediately Invoked Function Expressions. These are functions that are executed as soon as they are created. IIFEs require no explicit call to invoke the function. In Python, IIFEs can be created using the lambda function.\n",
     "\n",
-    "Here, I have created an IIFE that returns the cube of a number:"
+    "Here, I have created an IIFE that returns the square of a number:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "array([  0.,   1.,   4.,   9.,  16.,  25.,  36.,  49.,  64.,  81., 100.])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "4   5    Mary   30   10000"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        "4   5    Mary   33   10000"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
        "4   5    Mary   30   10000"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
        "[25, 30]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
        "4   5   Mary   30   10000"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +524,7 @@
        "4   5    Mary   30   12000"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
        "25620"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
        "4   5    Mary   30   12000    Adult"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
        "<function __main__.<lambda>(a, b, theta)>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -793,8 +793,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-84-a0060b8a4c19>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-83-ed3dbd72778a>\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(x)\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfun\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-17-a0060b8a4c19>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-16-ed3dbd72778a>\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(x)\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfun\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m: name 'a' is not defined"
      ]
     }
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
        "2"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
