cost function add and markdown update

--- a/Fundamentals/Markdown_in_Jupyter_Notebook.ipynb
+++ b/Fundamentals/Markdown_in_Jupyter_Notebook.ipynb
@@ -97,12 +97,10 @@
     "</ol>\n",
     "\n",
     "#### Unordered List\n",
-    "A list created by Markup tag start \\<ul> and end with \\</ul> with list items begot by \\<li> and \\</li>.\n",
-    "<ul>\n",
-    "<li>One</li>\n",
-    "<li>Two</li>\n",
-    "<li>Three</li>\n",
-    "</ul>"
+    "A list created by Markup tag start \\<ul> and end with \\</ul> with list items begot by \\<li> and \\</li>. Alternatively the Markdown symbol '\\*' can be used.\n",
+    "* One\n",
+    "* Two\n",
+    "* Three\n"
    ]
   },
   {
