Markdown JN update and PMO_9 JN update

--- a/Fundamentals/Markdown_in_Jupyter_Notebook.ipynb
+++ b/Fundamentals/Markdown_in_Jupyter_Notebook.ipynb
@@ -107,8 +107,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Bold and Italic Text\n",
+    "### Fonts\n",
     "\n",
+    "#### Bold\n",
     "**Bold** text can be created using Markdown symbols '\\*\\*' or '\\_\\_' or Markup tag \\<b>Bold\\</b>\n",
     "<br>\n",
     "\\<b>This is bold text \\</b>\n",
@@ -123,6 +124,8 @@
     "<br>\n",
     "__This is bold text__\n",
     "<br>\n",
+    "Alternatively, \\mathbf{} prints bold letters in math mode\n",
+    "#### Italic\n",
     "<b><i>Italic</i></b> text can be created using Markdown symbols '\\*' or '\\_' or Markup tag \\<i>Italic\\</i>\n",
     "<br>\n",
     "\\<b>This is italic text \\</b>\n",
@@ -135,7 +138,15 @@
     "<br>\n",
     "\\_This is italic text\\_\n",
     "<br>\n",
-    "_This is italic text_"
+    "_This is italic text_\n",
+    "<br>\n",
+    "#### Teletype text\n",
+    "<tt>Monospace</tt> text can be created using Markup tag \\<tt>teletype text\\</tt>.\n",
+    "<br>\n",
+    "<tt>This text is monospace text</tt>\n",
+    "<br>\n",
+    "Alternatively monospace font for a \\<p> element (with CSS):\n",
+    "<p style=\"font-family:'Lucida Console', monospace\">This text is monospace text.</p> "
    ]
   },
   {
@@ -143,8 +154,17 @@
    "metadata": {},
    "source": [
     "#### References:\n",
-    "__<a href=\"https://www.datacamp.com/community/tutorials/markdown-in-jupyter-notebook\">Link to Reference</a>__"
+    "__<a href=\"https://www.datacamp.com/community/tutorials/markdown-in-jupyter-notebook\">Link to Reference [1]</a>__\n",
+    "<br>\n",
+    "__<a href=\"https://www.w3schools.com/tags\">Link to Reference [2]</a>__"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
