--- a/Fundamentals/PMO_9.ipynb
+++ b/Fundamentals/PMO_9.ipynb
@@ -102,7 +102,7 @@
     {
      "data": {
       "text/plain": [
-       "<sympy.plotting.plot.Plot at 0x7fdabe30e150>"
+       "<sympy.plotting.plot.Plot at 0x7f767fd41b90>"
       ]
      },
      "execution_count": 3,
@@ -650,16 +650,16 @@
     "\n",
     "<table style=\"width:20%\">\n",
     "<tr> <th>Algorithm</th><th>Identifier</th> </tr>\n",
-    "    <tr> <td>Nelder-Mead</td> <td><i>'nelder-mead'</i></td> </tr>\n",
-    "<tr> <td>Powell</td> <td><i>'powell'</i></td> </tr>\n",
-    "    <tr> <td>Conj. Grad</td> <td><i>'cg'</i>'</td> </tr>\n",
-    "<tr> <td>BFGS</td> <td><i>'bfgs'</i></td> </tr>\n",
-    "<tr> <td>Dogleg Trust</td> <td><i>'dogleg'</i></td> </tr>\n",
-    "<tr> <td>Newtong CG Trust</td> <td><i>'ncg-trust'</i></td> </tr>\n",
-    "<tr> <td>Truncated Newton</td> <td><i>'tnc'</i></td> </tr>\n",
-    "<tr> <td>Lim. Mem. BFGS</td> <td><i>'l-bfgs-b'</i></td> </tr>\n",
-    "<tr> <td>COBYLA</td> <td><i>'cobyla'</i></td> </tr>\n",
-    "<tr> <td>SLSQP</td> <td><i>'slsqp'</i></td> </tr>\n",
+    "<tr> <td>Nelder-Mead</td> <td><tt>'nelder-mead'</tt></td> </tr>\n",
+    "<tr> <td>Powell</td> <td><tt>'powell'</tt></td> </tr>\n",
+    "<tr> <td>Conj. Grad</td> <td><tt>'cg'</tt></td> </tr>\n",
+    "<tr> <td>BFGS</td> <td><tt>'bfgs'</tt></td> </tr>\n",
+    "<tr> <td>Dogleg Trust</td> <td><tt>'dogleg'</tt></td> </tr>\n",
+    "<tr> <td>Newtong CG Trust</td> <td><tt>'ncg-trust'</tt></td> </tr>\n",
+    "<tr> <td>Truncated Newton</td> <td><tt>'tnc'</tt></td> </tr>\n",
+    "<tr> <td>Lim. Mem. BFGS</td> <td><tt>'l-bfgs-b'</tt></td> </tr>\n",
+    "<tr> <td>COBYLA</td> <td><tt>'cobyla'</tt></td> </tr>\n",
+    "<tr> <td>SLSQP</td> <td><tt>'slsqp'</tt></td> </tr>\n",
     "</table>"
    ]
   },
@@ -672,7 +672,7 @@
     "$$f(x) = 100(x_{0}^{2} - x_{1})^{2} + (x_{0} - 1)^{2}$$\n",
     "with\n",
     "$$\\mathbf{x}^{0}=[5, 3]$$\n",
-    "Using BFGS algorithm to minimise the Rosenbrock function without constraints"
+    "Using BFGS method algorithm to minimise the Rosenbrock function without constraints"
    ]
   },
   {
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -854,12 +854,14 @@
     "$$g_{1}(\\mathbf{x}) = x_{1}^{2} + 4x_{2}^{2} - 16 \\leq 0,$$\n",
     "$$g_{2}(\\mathbf{x}) = (x_{1} - 3)^{2} + (x_{2} - 3)^{2} - 9 \\leq 0$$\n",
     "and \n",
-    "$$x_{1} \\geq 0 \\space \\& \\space x_{2} \\geq 0$$"
+    "$$x_{1} \\geq 0 \\space \\& \\space x_{2} \\geq 0$$\n",
+    "<br>\n",
+    "Using SLSQP method algorithm to minimise the function with constraints"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -934,6 +936,86 @@
     "# Define initial values and minimise with supplying analytical gradients\n",
     "x0 = np.array([1, 1])\n",
     "result = sp.minimize(f, x0, jac=gradf, constraints=cons, bounds=bounds, method='slsqp')\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>9.7 Practical Mathematical Optimisation (PMO) Algorithms</h4>\n",
+    "\n",
+    "The optimisation algorithms presented in this section can be found via <tt>Springer</tt> under the module name <tt>pmo</tt>.\n",
+    "\n",
+    "The available method algorithms are supplied to ```scipy.optimize.minimize``` <tt>method</tt> as function objects.\n",
+    "\n",
+    "<table style=\"width:20%\">\n",
+    "<tr> <th>Algorithm</th><th>Identifier</th> </tr>\n",
+    "<tr> <td>LFOPC</td> <td><tt>'lfopc'</tt></td> </tr>\n",
+    "<tr> <td>ETOPC</td> <td><tt>'etopc'</tt></td> </tr>\n",
+    "<tr> <td>SQSD</td> <td><tt>'sqsd'</tt></td> </tr>\n",
+    "<tr> <td>Dynamic-Q</td> <td><tt>'dynq'</tt></td> </tr>\n",
+    "<tr> <td>Snyman-Fatti</td> <td><tt>'sfglob'</tt></td> </tr>\n",
+    "<tr> <td>GO-SSA</td> <td><tt>'gossa'</tt></td> </tr>\n",
+    "<tr> <td>GO-SDA</td> <td><tt>'gosda'</tt></td> </tr>\n",
+    "<tr> <td>GO-BFGS</td> <td><tt>'gobfgs'</tt></td> </tr>\n",
+    "</table>\n",
+    "<br>\n",
+    "Additional information on the argument settings is avaliable using <tt>help(pmo.dynq)</tt>\n",
+    "<br>\n",
+    "Consider the problem from §9.6.2. \n",
+    "Consider \n",
+    "$$minimise \\space \\space f(\\mathbf{x}) = 2x_{2} - x_{1}$$\n",
+    "subject to\n",
+    "$$g_{1}(\\mathbf{x}) = x_{1}^{2} + 4x_{2}^{2} - 16 \\leq 0,$$\n",
+    "$$g_{2}(\\mathbf{x}) = (x_{1} - 3)^{2} + (x_{2} - 3)^{2} - 9 \\leq 0$$\n",
+    "and \n",
+    "$$x_{1} \\geq 0 \\space \\& \\space x_{2} \\geq 0$$\n",
+    "<br>\n",
+    "Using Dynamic-Q method algorithm to minimise the function with constraints"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     fun: -3.6527010947260283\n",
+      "     jac: array([-1,  2])\n",
+      "    nfev: 8\n",
+      "     nit: 6\n",
+      "    njev: 7\n",
+      " success: True\n",
+      "       x: array([3.98608287, 0.16669089])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pmo #as pmo\n",
+    "\n",
+    "f = lambda x: 2*x[1] - x[0]\n",
+    "\n",
+    "def gradf(x):\n",
+    "    return np.array([-1, 2])\n",
+    "\n",
+    "def gradg0(x):\n",
+    "    return np.array([-2*x[0], -8*x[1]])\n",
+    "\n",
+    "def gradg1(x):\n",
+    "    return np.array([-2*(x[0]-3), -2*(x[1]-3)])\n",
+    "\n",
+    "bounds = [[0, None], [0, None]]\n",
+    "\n",
+    "cons = ({'type': 'ineq', 'fun': lambda x: -x[0]**2 - 4*x[1]**2 + 16, 'jac': gradg0},\n",
+    "        {'type': 'ineq', 'fun': lambda x: -(x[0]-3)**2 - (x[1]-3)**2 + 9, 'jac':gradg1})\n",
+    "\n",
+    "x0 = np.array([1, 1])\n",
+    "\n",
+    "result = sp.minimize(f, x0, jac=gradf, constraints=cons, bounds=bounds, method=pmo.dynq)\n",
     "print(result)"
    ]
   },
