--- a/Fundamentals/Markdown_in_Jupyter_Notebook.ipynb
+++ b/Fundamentals/Markdown_in_Jupyter_Notebook.ipynb
@@ -158,18 +158,11 @@
     "<br>\n",
     "__<a href=\"https://www.w3schools.com/tags\">Link to Reference [2]</a>__"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -183,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
